First untested guess at pi4j version 2 refactor.